--- a/game.css
+++ b/game.css
@@ -73,3 +73,55 @@ body, html {
   .pause-menu button:hover {
     background-color: #d6caca;
   }
+
+  .health-container {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 20px;
+    color: white;
+    font-family: Arial, sans-serif;
+  }
+  .heart {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    margin-right: 5px;
+    border-radius: 50%;
+  }
+  .game-over-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(121, 103, 103, 0.7);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: Arial, sans-serif;
+    font-size: 2em;
+    z-index: 100;
+  }
+  
+  .game-over-menu {
+    text-align: center;
+  }
+  
+  .game-over-menu button {
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 5px;
+  }
+  
+  .game-over-menu button:hover {
+    background-color: #d6caca;
+  }
+    
