--- a/game.css
+++ b/game.css
@@ -43,6 +43,11 @@ body, html {
     border-radius: 50%;
   }
 
+  .cross-enemy {
+    background-color: rgb(186, 23, 123);
+    border-radius: 5%;
+  }
+
 .obstacle{
   position: absolute;
   top: 0;
@@ -140,3 +145,15 @@ body, html {
     background-color: #d6caca;
   }
     
+  .score-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    color: white;
+    background-color: rgba(67, 67, 67, 0.5);
+    padding: 10px 15px;
+    border-radius: 5px;
+    z-index: 1000;
+  }
+  
