--- a/game.css
+++ b/game.css
@@ -11,11 +11,14 @@ body, html {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-color: #fff;
+    background-image: url('/source/player.png');
+    background-size: cover; /* 이미지가 요소 크기에 맞게 조정되도록 */
+    background-position: center; /* 이미지가 중앙에 위치하도록 */
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  
 
   .bullet {
     position: absolute;
