--- a/game.css
+++ b/game.css
@@ -11,7 +11,7 @@ body, html {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-image: url('/source/player.png');
+    background-image: url('source/player.png');
     background-size: cover; /* 이미지가 요소 크기에 맞게 조정되도록 */
     background-position: center; /* 이미지가 중앙에 위치하도록 */
     top: 90%;
@@ -42,10 +42,9 @@ body, html {
   }
 
   .charging-enemy {
-    background-image: url('/source/chargingEnemy.png'); /* charging-enemy 이미지를 배경으로 설정 */
+    background-image: url('source/chargingEnemy.png'); /* charging-enemy 이미지를 배경으로 설정 */
     background-size: cover; /* 이미지 크기를 요소 크기에 맞추기 */
     background-position: center; /* 이미지를 요소의 중앙에 배치 */
-    border-radius: 50%;
     transition: transform 0.2s ease; /* 부드러운 회전 효과 */
   }
   
