--- a/game.css
+++ b/game.css
@@ -114,6 +114,50 @@ body, html {
     background-color: #d6caca;
   }
 
+  .game-clear-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none; /* 초기에는 숨김 */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .game-clear-menu {
+    background-color: #333;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    color: #fff;
+    width: 300px;
+  }
+  
+  .game-clear-menu div {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+  
+  .game-clear-menu button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #555;
+    color: #fff;
+    transition: background-color 0.3s;
+  }
+  
+  .game-clear-menu button:hover {
+    background-color: #d6caca;
+  }
+  
+
   .health-container {
     position: absolute;
     top: 10px;
